cv-project/devops/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cv-project-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cv-project
  template:
    metadata:
      labels:
        app: cv-project
    spec:
      containers:
        - name: cv-project
          image: ghcr.io/smiggiddy/odin-codeprojects/cv-project:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: cv-project-service
spec:
  selector:
    app: cv-project
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
