cv-project/devops/cv-project-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cv-project-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  rules:
  - host: cv-project.odin.thecodedom.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cv-project-service
            port:
              number: 80
  tls:
  - hosts:
    - cv-project.odin.thecodedom.com
    secretName: cv-project-tls
